`microbit` example: Implement device information service

--- a/examples/microbit/playground/index.html
+++ b/examples/microbit/playground/index.html
@@ -1,6 +1,14 @@
 <div>
 	<h2>BBC micro:bit</h2>
 	<div class="control" connection>
+		<h3>Device Information</h3>
+		<p>Model Number: <span id="model-number">Unknown</span></p>
+		<p>Serial Number: <span id="serial-number">Unknown</span></p>
+		<p>Hardware Revision: <span id="hardware-revision">Unknown</span></p>
+		<p>Firmware Revision: <span id="firmware-revision">Unknown</span></p>
+		<p>Manufacturer Name: <span id="manufacturer-name">Unknown</span></p>
+	</div>
+	<div class="control" connection>
 		<h3>Buttons</h3>
 		<p>A: <span id="button-a-state">Unknown</span></p>
 		<p>B: <span id="button-b-state">Unknown</span></p>
